[ITB-1905, ITB-1935] REST API operations to manage test services
